Build 5 February 26, 2018
===========================

1. Added new game: The Sun.


Build 4 February 21, 2018
===========================

1. Added new game: Growable Triplets.

2. Added new game: All But One.


Build 3 February 18, 2018
=========================

1. Added new game: Diamond Hexagon.


Build 2 February 14, 2018
=========================

1. Added new game: Triangle Hexagon.

2. pocico is now free and open source software. See README and COPYING for details.


Build 1 February 11, 2018
=========================

1. First release!