@@ -1,3 +1,10 @@
+Build 5-1 February 26, 2018
+===========================
+
+1. Increase/Decrease state and Grow/Shrink buttons are automatically hidden
+   when they can't be used.
+
+
 Build 5 February 26, 2018
 ===========================
 
